# rust-bookshelf-api

./: Cargo.toml  README.md  compose.yml
migrations/: 0001_books_table.sql
src/: main.rs
