[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.3.0", features = ["macros", "rt-multi-thread", "net"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
redis = "1.0.3"
tower-http = { version = "0.6.8", features = ["cors"] }
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }